# workshop-mef

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake-multi-platform.yml
CMake/: GitUtils.cmake  Utils.cmake
src/2D/: basic_fem.cpp  cuda_fem.cpp  kokkos_fem.cpp  openacc_fem.cpp  openmp_fem.cpp
src/basic_fem/: CMakeLists.txt  basic_fem.cpp
src/cuda_fem/: CMakeLists.txt  cuda_fem.cpp
src/kokkos_fem/: CMakeLists.txt  kokkos_fem.cpp
src/openacc_fem/: CMakeLists.txt  openacc_fem - cópia.cpp  openacc_fem.cpp
src/openmp_fem/: CMakeLists.txt  openmp_fem.cpp
src/stdpar/: CMakeLists.txt  stdpar_fem.cpp
